--- a/sqeq.cabal
+++ b/sqeq.cabal
@@ -4,14 +4,20 @@ name: sqeq
 version: 0
 
 library
-  default-language: Haskell2010
-
-executable sqeq
   build-depends: base
   default-language: Haskell2010
+  exposed-modules: Sqeq
+  hs-source-dirs: lib
+
+executable sqeq
+  build-depends: base, sqeq
+  default-language: Haskell2010
+  hs-source-dirs: exe
   main-is: Main.hs
 
 test-suite tests
+  build-depends: base
   default-language: Haskell2010
-  type: exitcode-stdio-1.0
+  hs-source-dirs: test
   main-is: Tests.hs
+  type: exitcode-stdio-1.0
